# sample-django-image

./: .gitignore  Dockerfile  README.md  appspec.yaml  docker-compose.yml  main.py  pyproject.toml
app/: tasks.py
app/sample/: aws.py  settings.py  urls.py
app/users/: views.py
app/users/templates/: main.html
deploy/: create_deploy_config.sh
deploy/nginx/: server.conf.template
deploy/prod/: app.def.json  worker.def.json
deploy/production/: app.def.json  worker.def.json
deploy/staging/: app.def.json  worker.def.json
hack/: deploy_version.py  start_server.sh
